--- a/app/src/main/res/layout/user_detail_content.xml
+++ b/app/src/main/res/layout/user_detail_content.xml
@@ -232,7 +232,7 @@
         android:paddingLeft="5dp" >
 
         <TextView
-            android:id="@+id/tvLike"
+            android:id="@+id/tvLikeCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="5dp"
@@ -241,7 +241,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tvComment"
+            android:id="@+id/tvCommentCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="5dp"
@@ -250,7 +250,7 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/tvShares"
+            android:id="@+id/tvSharesCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0 Shares"
